# PROJECT_TRAINNSW

./: README.md  RESEARCH.MD  all.json  nsw_trains_realtime.csv  pyproject.toml  sydneytrains.json  temp.txt  update.txt
api/: nsw_trains.py  test2.py  test3.py  test4.py  test5.py  test_all_endpoints.py  train_routes.py
notebooks/: map.py  stops.ipynb  test.ipynb  train_simulator.html  train_stops.html  train_stops_v2.html
notes/: about.md  getting_started.md
pra/api/: application.py  temp.txt  test_api.py
requirement/: ver1.md
src/: test.py
src/templates/: index.html
src/transport.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
testapi/: feed.json  handshake.py  metro.py  readjson.py
transport/: .gitignore  main.py  pyproject.toml
transport/api/: test.py
transport/notebooks/: test.ipynb
transport/notes/: about.md  gtfs.md
